--- a/english.html
+++ b/english.html
@@ -345,6 +345,8 @@ Error message and password prompt
 
 <li>Children</li>
 
+<li>Chinese pickles</li>
+
 <li>Chocolate chip cookies</li>
 
 <li>Christmas dinner</li>
@@ -433,6 +435,8 @@ Error message and password prompt
 
 <li>Gan-Ya</li>
 
+<li>Garlic and herbs butter</li>
+
 <li>Genevieve</li>
 
 <li>Ghetto`s map</li>
@@ -480,6 +484,8 @@ Error message and password prompt
 <li>Holiday psalms</li>
 
 <li>Hora</li>
+
+<li>Horse radish</li>
 
 <li>Horses to Glue</li>
 
@@ -640,6 +646,8 @@ Error message and password prompt
 <li>On the way to Sarona</li>
 
 <li>Once</li>
+
+<li>Orange lentils' dal</li>
 
 <li>Our Father</li>
 
@@ -8765,7 +8773,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200306133317799" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200306141658115" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8774,7 +8782,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Potatoes' Gratin]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9569,6 +9577,18 @@ Yours- Dandan.
 
 </pre>
 </div>
+<div created="20200306141207909" modified="20200306141321557" tags="Recipes [[Vegan recipes]] [[Christmas dinner Recipes]]" title="Chinese pickles">
+<pre>
+[img[pictures/chamoozim-sinim.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[חמוצים סיניים]]&gt;&gt;
+
+
+</pre>
+</div>
 <div created="20200217130014362" modified="20200217130146341" tags="Recipes Baking [[Food addicts]] [[The archive's trustees]] [[The Baumans]]" title="Chocolate chip cookies">
 <pre>[img[pictures/chocolate-chips.jpg]]
 
@@ -10037,7 +10057,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200306140015789" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200306141553335" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10118,6 +10138,16 @@ Or as Alfred used to say:
 
  &lt;&lt;heblink [[גן-יה]]&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20200306140942045" modified="20200306141051952" tags="Recipes [[The kitchen by Genevieve]]" title="Garlic and herbs butter">
+<pre>
+[img[pictures/genevieve-green-butter.jpg]]
+
+
+
+ &lt;&lt;heblink [[חמאת שום ועשבי תיבול]]&gt;&gt;
 
 </pre>
 </div>
@@ -10449,6 +10479,13 @@ The [[Hora|https://en.wikipedia.org/wiki/Hora_(dance)]] is danced in a [[circle|
 
 
 </pre>
+</div>
+<div created="20200306140557140" modified="20200306140710726" tags="Recipes [[Christmas dinner Recipes]] [[Vegan recipes]]" title="Horse radish">
+<pre>
+[img[pictures/chazeret.jpg]]
+
+
+ &lt;&lt;heblink [[חזרת]]&gt;&gt;</pre>
 </div>
 <div created="20200215101749821" modified="20200215102128095" tags="[[In the Animal Farm]]" title="Horses to Glue">
 <pre>[img[pictures/soosim-ledevek.jpg]]
@@ -11467,6 +11504,15 @@ It seemed like, everything is fine''
 
 </pre>
 </div>
+<div created="20200306140220102" modified="20200306140416401" tags="Recipes [[Vegan recipes]] [[Food addicts]]" title="Orange lentils' dal">
+<pre>
+[img[pictures/adashim-ketumot.jpg]]
+
+
+
+ &lt;&lt;heblink [[דאל עדשים כתומות]]&gt;&gt;
+</pre>
+</div>
 <div created="20200217171010937" modified="20200217171403899" tags="[[The estate]]" title="Our Father">
 <pre>[img[pictures/avinu.jpg]]
 
@@ -11630,13 +11676,13 @@ And [[this|https://www.youtube.com/watch?v=WZd2SkydIXA]] is a performance whose 
 
  &lt;&lt;heblink [[פינה באוש]]&gt;&gt;</pre>
 </div>
-<div created="20200306135928877" modified="20200306140036718" tags="Recipes [[Christmas dinner Recipes]]" title="Potatoes' Gratin">
+<div created="20200306135928877" modified="20200306141653405" tags="Recipes [[Christmas dinner Recipes]]" title="Potatoes' Gratin">
 <pre>
 [img[pictures/gratin.jpg]]
 
 
 
- &lt;&lt;heblink [[גרטן תפו&quot;א]]&gt;&gt;
+ &lt;&lt;heblink [[גרטן תפוחי אדמה]]&gt;&gt;
 </pre>
 </div>
 <div created="20200217130746048" modified="20200219192735176" tags="[[Food addicts]] Baking [[Dreams that we've dreamt]]" title="Powders">
