--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ Error message and password prompt
 
 <li>געזונטהייטס</li>
 
-<li>גרטן תפו&quot;א</li>
+<li>גרטן תפוחי אדמה</li>
 
 <li>גרציאני</li>
 
@@ -9179,7 +9179,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200306135212869" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200306135214572" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200306141758867" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9188,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מתכונים" title="$:/StoryList">
+<div list="[[כוכב המשאלות 18]] [[גרטן תפוחי אדמה]] מתכונים" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200306140058275" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200306141345768" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11846,7 +11846,7 @@ Is where I want to be
 
 געזונטהייטס הוא הזירה המרכזית, [[של כל מה שקרה (אולי) וכל מה שקרה (כמעט) ב HH|HH]]. </pre>
 </div>
-<div created="20170409193149814" modified="20200306140123641" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="גרטן תפו&quot;א">
+<div created="20170409193149814" modified="20200306141724984" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="גרטן תפוחי אדמה">
 <pre>[img[pictures/gratin.jpg]]
 
 
@@ -11898,7 +11898,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20190307161740011" modified="20190307230829232" tags="מתכונים [[חיות אוכל]] [[מתכונים טבעוניים]]" title="דאל עדשים כתומות">
+<div created="20190307161740011" modified="20200306140511953" tags="מתכונים [[חיות אוכל]] [[מתכונים טבעוניים]]" title="דאל עדשים כתומות">
 <pre>[img[pictures/adashim-ketumot.jpg]]
 
 !!![[הצוות]]:
@@ -11922,7 +11922,13 @@ Is where I want to be
 
 3. מוסיפים את המים, העדשים והתבלינים, בוחשים בכף עץ ומבשלים 40 דקות עד שעה על להבה נמוכה (בוחשים מידי פעם)
 
-4. מגישי  על [[אורז לבן|אורז לבן עם צנוברים]]</pre>
+4. מגישי  על [[אורז לבן|אורז לבן עם צנוברים]]
+
+
+
+&lt;&lt;englink [[Orange lentils' dal]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20170905124350189" modified="20170907154115299" tags="[[אירי טוענת]]" title="דבקה">
 <pre>[img[pictures/dabke.jpg]]
@@ -13229,7 +13235,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170411155118410" modified="20180605133046961" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="חזרת">
+<div created="20170411155118410" modified="20200306140759935" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="חזרת">
 <pre>[img[pictures/chazeret.jpg]]
 
 !!![[אנג'ליק]]:
@@ -13248,7 +13254,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * טוחנים את שורש החזרת
 * מרסקים את הסלק על פומפיה דקה
 * מתבלים ומערבבים
-* שומרים במקרר בצנצנת סגורה</pre>
+* שומרים במקרר בצנצנת סגורה
+
+
+
+&lt;&lt;englink [[Horse radish]]&gt;&gt;
+</pre>
 </div>
 <div created="20170620145929305" modified="20200213164325618" tags="[[קופים ממונעים]] קפה מטבחים" title="חיות אוכל">
 <pre>[img[pictures/chayot-ochel.jpg]] 
@@ -13308,7 +13319,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Rear Window ]]&gt;&gt;</pre>
 </div>
-<div created="20170422160814236" modified="20180605132739043" tags="[[המטבח על פי ז'נבייב]] מתכונים" title="חמאת שום ועשבי תיבול">
+<div created="20170422160814236" modified="20200306141138768" tags="[[המטבח על פי ז'נבייב]] מתכונים" title="חמאת שום ועשבי תיבול">
 <pre>[img[pictures/genevieve-green-butter.jpg]]
 
 !!![[ז'נבייב]]:
@@ -13325,9 +13336,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
  יוצקים לתוך כלי בגודל מתאים, מרופד בגיליון נייר אפייה, עוטפים יפה עם שולי הנייר. 
 
 כשחם כדאי לשמור במקרר.
+
+
+
+
+
+&lt;&lt;englink [[Garlic and herbs butter]]&gt;&gt;
 </pre>
 </div>
-<div created="20170412203708355" modified="20180605133105018" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="חמוצים סיניים">
+<div created="20170412203708355" modified="20200306141410276" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="חמוצים סיניים">
 <pre>[img[pictures/chamoozim-sinim.jpg]]
 
 [[גואן יין]]:
@@ -13345,6 +13362,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מעבירים לצנצנות, סוגרים ומשאירים בחוץ עד שהירקות מגיעים לטמפרטורת החדר.
 
 מכניסים למקרר, ואפשר להתחיל לאכול יום-יומיים אחר כך.
+
+
+
+&lt;&lt;englink [[Chinese pickles]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20171208204414739" modified="20200217165754013" tags="[[הנחלה בה גדלתי]]" title="חנה אמנו">
@@ -14187,11 +14209,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 הנה הם הגיעו. נכנסנו פנימה לדןדן ויויו והמשכנו בהכנות לערב. יויו שלף בגאווה מתיק הגב חנוכייה ונרות. הם הביאו לוקוס ענקי מפולט. כבר היה רבע לשלוש אז התחלתי [[לאפות|אפייה]]. אירי התייצבה לידי ורצתה לדעת ולעשות איתי כל דבר. הכנו [[פאי דובדבנים]], [[פאי פקאן עם קרמל]] [[ופאי אגסים עם קרם גבינה ושקדים|פאי אגסים עם קרם גבינה ושקדים]]. יויו הכין [[מרק כתום בסיר גדול]] ואת הדג לאפייה שתתבצע רק זמן קצר לפני הארוחה. אחרי העוגות אפיתי את פלחי הכרוב ורצועות הקישואים הירוקים בשמן זית ומלח גס. גורה ואירי הכינו [[אורז לבן עם צנוברים]], [[מג'דרה]], [[תפוחי אדמה ובטטות בתנור]], [[פלפלים קלויים]], [[סלט עדשים עם כוסברה ובצל קצוץ]] [[וסלט עגבניות עם שום|סלט עגבניות עם שום]]. שתינו בירות ועישנו ודיברנו על מה שנלבש ועל האוכל וערכנו את השולחן. כבר היה ערב, הכנתי [[שעועית ירוקה בחמאה ושום]] [[וסלק מבושל|סלק מבושל]] ואת [[האספרגוס|אספרגוס]]. יויו הכין [[סלט חסה]] [[וסלט מלפפונים עם בצל סגול ושמיר|סלט מלפפונים עם בצל סגול ושמיר]]. דןדן בעיקר עזר מסביב, חתך, ערבב, שטף כלים וניקה. אירי והוא פירקו לקערה ענקית ובסבלנות רבה פומלות ותפוזים. מעל סחטו לימון ופיזרו שתי כפות סוכר, ערבבו ופיזרו אגוזי מלך קלויים. על משטח העבודה סידרו הבנים את בקבוקי האלכוהול וכוסות וחטיפים. הכנתי [[טוסטים|טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]] עם טחינה, רסק עגבניות, מעליהם הנחתי את הקישואים והכרוב האפויים וגררתי פרמז'ן. הבאתי אותם גאה ליויו וביקשתי שיניח אותם עם החטיפים שליד השתייה וגם את [[עוגיות הקימל|עוגיות קימל]]. הוא עשה זאת כמובן. אירי וגורה הדליקו נרות. יויו שם [[רשימת שמע|https://www.youtube.com/watch?v=pCpua4dvUXs&amp;list=RDQMhAwOcO3mVV8]] של  Fela Kuti. לא הכרתי את פֶלָה עד לאותו הרגע. יויו אמר לי שזה חור רציני בהשכלה. הנחנו כל דבר במקומו. כבר היה שבע. </pre>
 </div>
-<div created="20171114145347322" modified="20171206170019704" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 18">
+<div created="20171114145347322" modified="20200306141755365" tags="[[כוכב המשאלות בעל תשע הצלעות]]" title="כוכב המשאלות 18">
 <pre>[img[pictures/cochav-18.jpg]]
 
 
-התקלחנו והתלבשנו כולנו. לבשתי שמלה שחורה וז'קט שחור וחרוזים שחורים ונעלתי נעליים שחורות וגרבתי גרבונים חומים וענדתי את עגילי הזהב התלויים הקבועים שלי שרכשתי לפני כמה שנים בחנות תכשיטים ליד השוק בתמורה לטבעת הנישואין שלי ושרשרת זהב קרועה. התאפרתי והתבשמתי. נפגשנו בסלון. [[דןדן]] מזג לכולנו יין והרמנו לחיים. כולם היו חגיגיים וריחניים כדבעי, [[גורה]] בחצאית קפלים מעל הברכיים בוורוד בהיר וגרביים גבוהים לבנים עד מעל לברכיים מעוטרים בהדפסים של עץ אשוח. מעל סוודר לבן צמוד ארוך. נעולה נעליים סגולות גבוהות עם שרוכים. [[אירי]] בחולצת צווארון ירקרקה חתיכית מעליה סוודר עם שרוולים קצרים באפור כהה ומכנסיים מתרחבים באפור בהיר תחתם נעלה מגפונים חומים רכים, על צווארה שרשרת זהב דקה עם כוכב אחד קטן וצמד דובדבנים. הבנים חתיכים במכנסיים וסוודרים צבעוניים. בשמונה הפעמון צלצל בפעם הראשונה. [[יויו]], דןדן וגורה מיד רצו לדלת. בדלת עמדו [[אלפרד]], מחייך ואוחז בובת סנטה קלאוס ענקית ביד שמאל וביד ימין תיק פלסטיק בו היו תבשיל שורשים ואורז בשלושה צבעים וצנצנת עם מלפפונים חמוצים; [[ג'וזף|ג'וזף אברואה]], עם ארגז מלא אלכוהול ושקית מלאה שוקולד ואגוזים ופירות יבשים; איתם [[דניאל]], בחור רזה למדי וגבוה, על שיניו קוביות ליישור שיניים ובחיוכו החביב מבוכה. שיערו שחור וגזור בתספורת קצרה חתוכה היטב ובלורית משוכה לאחור. בידיו [[גרטן תפוחי אדמה|גרטן תפו&quot;א]] ויין; ומאחור [[אנג'ליק]], ג'ינג'ית יפה עם שיער חלק עד הכתפיים ועיניים ירוקות, אוחזת בידיה תבנית ובה [[פחזניות ממולאות בכבד קצוץ]], צנצנת [[חזרת]], שקית מלאה בצימוקים שחורים ובקבוק בחרובקה. הם נכנסו והכול הלך נהדר, אני לא אגיד את זה יותר. כל מי שנכח בערב הזה היה אדם ללא דופי. אחריהם הגיעו [[סוניה]] ובעלה [[מרק]]. סוניה לבושה שחור ושיערה השחור אסוף לתסרוקת מפוארת מקושטת בסיכות מעוטרות בקריסטלים, זקופה ומחייכת. מרק, גבר נאה, גבוה ורחב, לבוש שחור גם הוא, פניו מעוטרים בשפם גזוז ולא עבה מדי. הם הביאו [[צלי בשר עם תפוחי אדמה]], פנהטונה [[וריגו יאנצ'י|ריגו יאנצ'י]]. מרק הגיש ליויו ליקר דובדבנים ובקבוק שנאפס תפוחים. תודה רבה, הוא אמר לו, אנחנו הולכים להיגמר הלילה מאלכוהול, מרק, תיקח את זה בחשבון. אני ויקינג יויו, כלום לא מפיל אותי ובאנו עם מונית, מרק ענה. בשמונה ורבע חמשת [[הסינים]] הגיעו ואחד מהם הביא איתו חברה. [[קואנג]], [[ג'ונג]], [[פה]], [[צ'נג]] [[וצ'ן|צ'ן]] שמותיהם, ושם העלמה [[גואן יין]]. הם לא עונים לשום קלישאה על אודות עובדי בניין סינים למעט עיניהם המלוכסנות ושמותיהם, ואלה אינם קלישאה. הם הביאו המון בקבוקים של בירה, קולה ויין וגם לחמים וגבינות. גואן יין הביאה חמוצים סיניים שהכינה וקדאיף שקנתה בעיר. אירי ואני היינו מהופנטות. סידרנו את כמויות המזון והמשקאות. השולחן התחיל להתפוצץ. [[ז'נבייב]] היפה והאלגנטית הגיעה עם שתי הבנות, [[אלכסנדרה]] [[וראשל|ראשל]]. היא הביאה [[תרנגול הודו אפוי]], [[קוסקוס]] שיויו התחנן שתביא למרות הכול [[ועיגולי מרציפן|עיגולי מרציפן]]. הבנות הביאו שקית ענקית ומלאה בסוכריות גומי מתנה לכולם ובמיוחד לאלפרד, שציפו להכירו והתחברו אליו מיד. [[רוז'ה]] הגיע עם [[לזניה צמחונית]] וזר פרחים ועם חברתו [[אנה]], שהביאה [[סלט שורשים|סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום]] חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום. 
+התקלחנו והתלבשנו כולנו. לבשתי שמלה שחורה וז'קט שחור וחרוזים שחורים ונעלתי נעליים שחורות וגרבתי גרבונים חומים וענדתי את עגילי הזהב התלויים הקבועים שלי שרכשתי לפני כמה שנים בחנות תכשיטים ליד השוק בתמורה לטבעת הנישואין שלי ושרשרת זהב קרועה. התאפרתי והתבשמתי. נפגשנו בסלון. [[דןדן]] מזג לכולנו יין והרמנו לחיים. כולם היו חגיגיים וריחניים כדבעי, [[גורה]] בחצאית קפלים מעל הברכיים בוורוד בהיר וגרביים גבוהים לבנים עד מעל לברכיים מעוטרים בהדפסים של עץ אשוח. מעל סוודר לבן צמוד ארוך. נעולה נעליים סגולות גבוהות עם שרוכים. [[אירי]] בחולצת צווארון ירקרקה חתיכית מעליה סוודר עם שרוולים קצרים באפור כהה ומכנסיים מתרחבים באפור בהיר תחתם נעלה מגפונים חומים רכים, על צווארה שרשרת זהב דקה עם כוכב אחד קטן וצמד דובדבנים. הבנים חתיכים במכנסיים וסוודרים צבעוניים. בשמונה הפעמון צלצל בפעם הראשונה. [[יויו]], דןדן וגורה מיד רצו לדלת. בדלת עמדו [[אלפרד]], מחייך ואוחז בובת סנטה קלאוס ענקית ביד שמאל וביד ימין תיק פלסטיק בו היו תבשיל שורשים ואורז בשלושה צבעים וצנצנת עם מלפפונים חמוצים; [[ג'וזף|ג'וזף אברואה]], עם ארגז מלא אלכוהול ושקית מלאה שוקולד ואגוזים ופירות יבשים; איתם [[דניאל]], בחור רזה למדי וגבוה, על שיניו קוביות ליישור שיניים ובחיוכו החביב מבוכה. שיערו שחור וגזור בתספורת קצרה חתוכה היטב ובלורית משוכה לאחור. בידיו [[גרטן תפוחי אדמה]] ויין; ומאחור [[אנג'ליק]], ג'ינג'ית יפה עם שיער חלק עד הכתפיים ועיניים ירוקות, אוחזת בידיה תבנית ובה [[פחזניות ממולאות בכבד קצוץ]], צנצנת [[חזרת]], שקית מלאה בצימוקים שחורים ובקבוק בחרובקה. הם נכנסו והכול הלך נהדר, אני לא אגיד את זה יותר. כל מי שנכח בערב הזה היה אדם ללא דופי. אחריהם הגיעו [[סוניה]] ובעלה [[מרק]]. סוניה לבושה שחור ושיערה השחור אסוף לתסרוקת מפוארת מקושטת בסיכות מעוטרות בקריסטלים, זקופה ומחייכת. מרק, גבר נאה, גבוה ורחב, לבוש שחור גם הוא, פניו מעוטרים בשפם גזוז ולא עבה מדי. הם הביאו [[צלי בשר עם תפוחי אדמה]], פנהטונה [[וריגו יאנצ'י|ריגו יאנצ'י]]. מרק הגיש ליויו ליקר דובדבנים ובקבוק שנאפס תפוחים. תודה רבה, הוא אמר לו, אנחנו הולכים להיגמר הלילה מאלכוהול, מרק, תיקח את זה בחשבון. אני ויקינג יויו, כלום לא מפיל אותי ובאנו עם מונית, מרק ענה. בשמונה ורבע חמשת [[הסינים]] הגיעו ואחד מהם הביא איתו חברה. [[קואנג]], [[ג'ונג]], [[פה]], [[צ'נג]] [[וצ'ן|צ'ן]] שמותיהם, ושם העלמה [[גואן יין]]. הם לא עונים לשום קלישאה על אודות עובדי בניין סינים למעט עיניהם המלוכסנות ושמותיהם, ואלה אינם קלישאה. הם הביאו המון בקבוקים של בירה, קולה ויין וגם לחמים וגבינות. גואן יין הביאה חמוצים סיניים שהכינה וקדאיף שקנתה בעיר. אירי ואני היינו מהופנטות. סידרנו את כמויות המזון והמשקאות. השולחן התחיל להתפוצץ. [[ז'נבייב]] היפה והאלגנטית הגיעה עם שתי הבנות, [[אלכסנדרה]] [[וראשל|ראשל]]. היא הביאה [[תרנגול הודו אפוי]], [[קוסקוס]] שיויו התחנן שתביא למרות הכול [[ועיגולי מרציפן|עיגולי מרציפן]]. הבנות הביאו שקית ענקית ומלאה בסוכריות גומי מתנה לכולם ובמיוחד לאלפרד, שציפו להכירו והתחברו אליו מיד. [[רוז'ה]] הגיע עם [[לזניה צמחונית]] וזר פרחים ועם חברתו [[אנה]], שהביאה [[סלט שורשים|סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום]] חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום. 
 כבר היה רבע לתשע. דןדן ואני שטפנו את הכלים שהיו בכיור.
 כולם כאן חוץ מהדוקטור, יויו אמר בקול ובו ברגע נשמע צלצול בדלת. סיימנו לשטוף את הכלים שנינו. מזגנו לעצמנו בחרובקה והקשנו כוס לכוס. 
 </pre>
