--- a/english.html
+++ b/english.html
@@ -371,6 +371,10 @@ Error message and password prompt
 
 <li>Crust dough</li>
 
+<li>Crust dough extras</li>
+
+<li>Crust dough extras 2</li>
+
 <li>Dalya`s room</li>
 
 <li>Dandan</li>
@@ -561,6 +565,8 @@ Error message and password prompt
 
 <li>lechem-tushia Sheinkin</li>
 
+<li>Legume balls with coconut curry sauce</li>
+
 <li>Lehamim</li>
 
 <li>Lemon cookies</li>
@@ -573,11 +579,15 @@ Error message and password prompt
 
 <li>Life is not About Talking</li>
 
+<li>Locus in the oven</li>
+
 <li>logo-bg</li>
 
 <li>Lotus books</li>
 
 <li>Love</li>
+
+<li>Mangold and tofu pastry</li>
 
 <li>Manta Ray</li>
 
@@ -719,6 +729,8 @@ Error message and password prompt
 
 <li>Roast beef with potatoes</li>
 
+<li>Roasted vegetables</li>
+
 <li>Roger</li>
 
 <li>Romema</li>
@@ -769,7 +781,11 @@ Error message and password prompt
 
 <li>Sultana and Yasmin</li>
 
+<li>Tahini, tomatoes and zucchini toasts</li>
+
 <li>Tal Bagels</li>
+
+<li>Tarte tatin</li>
 
 <li>Technical director</li>
 
@@ -874,6 +890,8 @@ Error message and password prompt
 <li>Urban Nature</li>
 
 <li>Vegan recipes</li>
+
+<li>Vegetarian lasagne</li>
 
 <li>Vincent Van Gogh</li>
 
@@ -8782,7 +8800,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Potatoes' Gratin]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9737,6 +9755,23 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
 
 </pre>
 </div>
+<div created="20200306144317316" modified="20200306144433614" tags="[[When they sleep]] Baking Recipes" title="Crust dough extras">
+<pre>
+[img[pictures/keshenishar-bazek-parich.jpg]]
+
+
+ &lt;&lt;heblink [[כשנשאר בצק פריך]]&gt;&gt;</pre>
+</div>
+<div created="20200306144604800" modified="20200306144733850" tags="Recipes [[When they sleep]] Baking" title="Crust dough extras 2">
+<pre>
+[img[pictures/keshenishar-bazek-parich2.jpg]]
+
+
+
+ &lt;&lt;heblink [[כשנשאר בצק פריך 2]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200226063122808" modified="20200226063326805" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Houses [[True stories]]" title="Dalya`s room">
 <pre>[img[pictures/dalya.jpg]]
 
@@ -10057,7 +10092,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200306141553335" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200306145603081" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10919,6 +10954,14 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
  &lt;&lt;heblink [[לחם תושיה שינקין]]&gt;&gt;
 </pre>
 </div>
+<div created="20200306143713710" modified="20200306144037102" tags="Recipes [[Food addicts]] [[The team]]" title="Legume balls with coconut curry sauce">
+<pre>
+[img[pictures/cadurey-kitniyot.jpg]]
+
+
+ &lt;&lt;heblink [[כדורי קטניות ברוטב קוקוס וקארי ירוק]]&gt;&gt;
+</pre>
+</div>
 <div created="20200219162401317" modified="20200219162549802" tags="[[Here in the Ghetto]] [[Coffee shops]] Restaurants Baking [[Food addicts]] Kitchens" title="Lehamim">
 <pre>[img[pictures/breads.jpg]]
 
@@ -11009,6 +11052,15 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 
 </pre>
 </div>
+<div created="20200306144908657" modified="20200306145024930" tags="Recipes [[Christmas dinner Recipes]]" title="Locus in the oven">
+<pre>
+[img[pictures/dag-matconim.jpg]]
+
+
+ &lt;&lt;heblink [[לוקוס בתנור]]&gt;&gt;
+
+</pre>
+</div>
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
@@ -11037,6 +11089,16 @@ For example, it seethes me when people use words purposelessly, like the word lo
 
 
  &lt;&lt;heblink [[אהבה]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200306145442838" modified="20200306145624328" tags="[[Vegan recipes]] Recipes [[what does a thing assemble]] [[Food addicts]]" title="Mangold and tofu pastry">
+<pre>
+[img[pictures/mangold-tofu.jpg]]
+
+
+
+ &lt;&lt;heblink [[מאפה טופו ומנגולד]]&gt;&gt;
 
 </pre>
 </div>
@@ -11937,6 +11999,13 @@ Though, therapy speaking, I'm covered in every direction, only recently after [[
 
 </pre>
 </div>
+<div created="20200306142444270" modified="20200306142613864" tags="[[The kitchen by Genevieve]] Recipes [[Vegan recipes]]" title="Roasted vegetables">
+<pre>
+[img[pictures/yerakot-klooim.jpg]]
+
+
+ &lt;&lt;heblink [[ירקות קלויים]]&gt;&gt;</pre>
+</div>
 <div created="20200218190952659" modified="20200220075051418" tags="[[Coen sister]]" title="Roger">
 <pre>[img[pictures/5VdqSTjL1ficmZ1K.jpg]]
 
@@ -12247,12 +12316,30 @@ We rejoiced and danced and sang and ate her magnificent [[semolina cake|Semolina
  &lt;&lt;heblink [[סולטנה ויסמין]]&gt;&gt;
 </pre>
 </div>
+<div created="20200306142158905" modified="20200306142331060" tags="Recipes [[Christmas dinner Recipes]]" title="Tahini, tomatoes and zucchini toasts">
+<pre>
+[img[pictures/tost.jpg]]
+
+
+
+ &lt;&lt;heblink [[טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן]]&gt;&gt;
+</pre>
+</div>
 <div created="20200226065424547" modified="20200226065603791" tags="Coffee [[Here in the Ghetto]] Restaurants" title="Tal Bagels">
 <pre>[img[pictures/tal-bagels.jpg]]
 
 
 
  &lt;&lt;heblink [[טל בייגלס]]&gt;&gt;
+</pre>
+</div>
+<div created="20200306141912158" modified="20200306142040911" tags="Recipes Baking [[When they sleep]]" title="Tarte tatin">
+<pre>
+[img[pictures/tarte-tatin.jpg]]
+
+
+
+ &lt;&lt;heblink [[טארט טאטן]]&gt;&gt;
 </pre>
 </div>
 <div created="20200219131041061" modified="20200219131244245" tags="TV [[Here in the Ghetto]] [[True stories]]" title="Technical director">
@@ -13065,6 +13152,15 @@ The farm's animals are delighted with surprise.
 
  &lt;&lt;heblink [[מתכונים טבעוניים]]&gt;&gt;
 </pre>
+</div>
+<div created="20200306145146590" modified="20200306145250661" tags="Recipes [[Christmas dinner Recipes]]" title="Vegetarian lasagne">
+<pre>
+[img[pictures/lazania.jpg]]
+
+
+
+
+&lt;&lt;heblink [[לזניה צמחונית]]&gt;&gt;</pre>
 </div>
 <div created="20200213171604745" modified="20200216174405367" tags="[[Outer sisters]]" title="Vincent Van Gogh">
 <pre>[img[pictures/van-goch.jpg]]
