--- a/index.html
+++ b/index.html
@@ -9188,7 +9188,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כוכב המשאלות 18]] [[גרטן תפוחי אדמה]] מתכונים" title="$:/StoryList">
+<div list="מתכונים" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9628,7 +9628,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200306141345768" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200306145655405" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -13416,7 +13416,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Hashmal Avi]]&gt;&gt;</pre>
 </div>
-<div created="20190304133114544" modified="20190314144933726" tags="מתכונים [[כשהם ישנים]] אפייה" title="טארט טאטן">
+<div created="20190304133114544" modified="20200306142129509" tags="מתכונים [[כשהם ישנים]] אפייה" title="טארט טאטן">
 <pre>[img[pictures/tarte-tatin.jpg]]
 
 !!![[אווה]]:
@@ -13451,7 +13451,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-</pre>
+&lt;&lt;englink [[Tarte tatin]]&gt;&gt;</pre>
 </div>
 <div created="20190404183713312" modified="20200226064644394" tags="[[כאן בגטו]] מוזיקה [[סיפורים אמיתיים]]" title="טבע עירוני">
 <pre>[img[pictures/zirey-kaitz.jpg]]
@@ -13518,7 +13518,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Tony Soprano]]&gt;&gt;</pre>
 </div>
-<div created="20170407152300115" modified="20180605133128440" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
+<div created="20170407152300115" modified="20200306142420338" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="טוסטים עם טחינה, רסק עגבניות, מעליהם קישואים וכרוב אפויים ופרמז'ן">
 <pre>[img[pictures/tost.jpg]]
 
 !!![[אווה]]:
@@ -13526,7 +13526,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * פורסים זוקיני למלבנים, קורעים עלי כרוב, מניחים אותם בתבנית מרופדת בנייר אפייה, מתבלים בשמן זית ומלח גס, ואופים בתנור שחומם מראש ל190 מעלות צלזיוס עד התרככותם והזהבתם.
 * מרסקים עבנייה על פומפיה ומערבבים לתוכה כמה גרגרי מלח.
 * קולים פרוסות לחם בתנור עד לגוון הרצוי.
-* מרכיבים את הטוסט: מניחים פרוסה קלויה, מעליה מורחים טחינה גולמית, מעליה רסק עגבניות, מעל מניחים ירקות קלויים, גוררים פרמז'ן וזה מוכן.</pre>
+* מרכיבים את הטוסט: מניחים פרוסה קלויה, מעליה מורחים טחינה גולמית, מעליה רסק עגבניות, מעל מניחים ירקות קלויים, גוררים פרמז'ן וזה מוכן.
+
+
+&lt;&lt;englink [[Tahini, tomatoes and zucchini toasts]]&gt;&gt;
+</pre>
 </div>
 <div created="20170624105143385" modified="20200216145855330" tags="[[חיות אוכל]] [[כשהם ישנים]] מתכונים אפייה" title="טורט">
 <pre>[img[pictures/tort.jpg]]
@@ -13776,7 +13780,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Comprehensive or compulsive]]&gt;&gt;
 </pre>
 </div>
-<div created="20170422205250692" modified="20180605132756716" tags="[[המטבח על פי ז'נבייב]] [[מתכונים טבעוניים]] מתכונים" title="ירקות קלויים">
+<div created="20170422205250692" modified="20200306143831593" tags="[[המטבח על פי ז'נבייב]] [[מתכונים טבעוניים]] מתכונים" title="ירקות קלויים">
 <pre>[img[pictures/yerakot-klooim.jpg]]
 
 !!![[ז'נבייב]]:
@@ -13797,7 +13801,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 לאחר שהפלפל התקרר, מסננים את הנוזל שבתוכו, מסירים את הקליפה והגרעינים, ומסדרים על צלחת, מערבבים את המיץ המסונן עם שמן זית, יוצקים את הנוזל מעל, ומפזרים מלח  גס.
 
-</pre>
+
+
+&lt;&lt;englink [[Roasted vegetables]]&gt;&gt;</pre>
 </div>
 <div created="20180712143703187" modified="20200223154901826" tags="[[מטא בדיון]] [[אחיות חוץ]] [[הכפר הגלובלי]]" title="כאן בגטו">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
@@ -13845,7 +13851,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Laundry]]&gt;&gt;</pre>
 </div>
-<div created="20180511192958752" modified="20180605131521582" tags="[[חיות אוכל]] הצוות מתכונים" title="כדורי קטניות ברוטב קוקוס וקארי ירוק">
+<div created="20180511192958752" modified="20200306144200765" tags="[[חיות אוכל]] הצוות מתכונים" title="כדורי קטניות ברוטב קוקוס וקארי ירוק">
 <pre>[img[pictures/cadurey-kitniyot.jpg]]
 
 !!![[הצוות]]:
@@ -13906,7 +13912,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 11. מגישים על אורז לבן ומעל מפזרים כוסברה קצוצה . יויו אוהב להוסיף 2 טיפות שמן קפיר ליים 
 
-(אורז לבן: בסיר - כוס אורז, שתי כוסות מים וכמה גרגרי מלח על אש נמוכה עד שמתאדים הנוזלים)</pre>
+(אורז לבן: בסיר - כוס אורז, שתי כוסות מים וכמה גרגרי מלח על אש נמוכה עד שמתאדים הנוזלים)
+
+
+&lt;&lt;englink [[Legume balls with coconut curry sauce]]&gt;&gt;</pre>
 </div>
 <div created="20161112194346716" modified="20200215174442342" tags="[[כוכב המשאלות בעל תשע הצלעות]] בתים" title="כוכב המשאלות 01">
 <pre> 
@@ -14683,7 +14692,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[When the cars were pretty]]&gt;&gt;
 </pre>
 </div>
-<div created="20190305120006619" modified="20191027064147066" tags="[[כשהם ישנים]] מתכונים אפייה" title="כשנשאר בצק פריך">
+<div created="20190305120006619" modified="20200306144527879" tags="[[כשהם ישנים]] מתכונים אפייה" title="כשנשאר בצק פריך">
 <pre>[img[pictures/keshenishar-bazek-parich.jpg]]
 
 !!![[אווה]]:
@@ -14700,9 +14709,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 6. לאפות בחום בינוני (170 מעלות צלזיוס) כעשרים דקות
 
-7. להניח על צלחת יפה ולהגיש</pre>
+7. להניח על צלחת יפה ולהגיש
+
+
+
+
+&lt;&lt;englink [[Crust dough extras]]&gt;&gt;</pre>
 </div>
-<div created="20191027063636357" modified="20191028065525800" tags="אפייה מתכונים [[כשהם ישנים]]" title="כשנשאר בצק פריך 2">
+<div created="20191027063636357" modified="20200306144825580" tags="אפייה מתכונים [[כשהם ישנים]]" title="כשנשאר בצק פריך 2">
 <pre>[img[pictures/keshenishar-bazek-parich2.jpg]]
 
 !!![[אווה]]:
@@ -14723,7 +14737,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 7. אופים ב 170 מעלות צלזיוס כ 20 דקות עד חצי שעה (עד שהרולדות זהובות)
 
-</pre>
+
+&lt;&lt;englink [[Crust dough extras 2]]&gt;&gt;</pre>
 </div>
 <div created="20180508163939540" modified="20200225173036869" tags="[[אירי טוענת]] [[אחיות חוץ]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="כתב התנועה אשכול-וכמן">
 <pre>[img[pictures/ctav-tnua.jpg]]
@@ -14781,7 +14796,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Lotus books]]&gt;&gt;
 </pre>
 </div>
-<div created="20170402165550173" modified="20180605133148089" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="לוקוס בתנור">
+<div created="20170402165550173" modified="20200306145113841" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="לוקוס בתנור">
 <pre>[img[pictures/dag-matconim.jpg]]
 
 !!![[יויו]]:
@@ -14792,7 +14807,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מורחים היטב את הכמות כולה ובצורה אחידה מסביב לדג כולו, ומניחים אותו בתבנית מרופדת בנייר אלומיניום פתוח כך שאפשר יהיה לעטוף אותו למשך האפייה.
 
-פותחים חתכים עם סכין בגב הדג, מפזרים מעל הדג מלח ים גס ופלפל שחור גרוס, עוטפים בנייר האלומינום, ואופים בתנור שחומם מראש ל-180 מעלות צלזיוס עשרים- עשרים וחמש דקות.</pre>
+פותחים חתכים עם סכין בגב הדג, מפזרים מעל הדג מלח ים גס ופלפל שחור גרוס, עוטפים בנייר האלומינום, ואופים בתנור שחומם מראש ל-180 מעלות צלזיוס עשרים- עשרים וחמש דקות.
+
+
+
+
+&lt;&lt;englink [[Locus in the oven]]&gt;&gt;</pre>
 </div>
 <div created="20170602125241296" modified="20200216174920781" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="לורין היל">
 <pre>[img[pictures/lauryn-hill.jpg]]
@@ -14804,7 +14824,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Lauryn Hill]]&gt;&gt;
 </pre>
 </div>
-<div created="20170413203131062" modified="20180605133204673" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="לזניה צמחונית">
+<div created="20170413203131062" modified="20200306145352923" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="לזניה צמחונית">
 <pre>[img[pictures/lazania.jpg]]
 
 !!![[רוז'ה]]:
@@ -14866,6 +14886,9 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 10. מקררים כעשרים דקות, חותכים ומגישים
 
+
+
+&lt;&lt;englink [[Vegetarian lasagne]]&gt;&gt;
 </pre>
 </div>
 <div created="20181014115132718" modified="20181014160157265" tags="[[חיות אוכל]]" title="לחם">
@@ -15293,7 +15316,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Manta Ray]]&gt;&gt;
 </pre>
 </div>
-<div created="20190511095710523" modified="20190513164622003" tags="[[חיות אוכל]] [[למה הדבר דומה]] [[מתכונים טבעוניים]] מתכונים" title="מאפה טופו ומנגולד">
+<div created="20190511095710523" modified="20200306145721882" tags="[[חיות אוכל]] [[למה הדבר דומה]] [[מתכונים טבעוניים]] מתכונים" title="מאפה טופו ומנגולד">
 <pre>[img[pictures/mangold-tofu.jpg]]
 
 !!![[הצוות]]:
@@ -15354,7 +15377,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 9. בעזרת סכין חלקה וחדה חורצים בעדינות חריצים לרוחב המאפים, מזלפים שמן זית, מפזרים את גרעיני הדלעת ואת המלח הגס, ואופים 40-50 דקות - עד שהבצק שחום.
 
 10. להגשה אפשר להכין קערה עם טחינה גולמית לתוכה מוזגים מעט שמן זית ומלח גס, אליהם אפשר גם להוסיף עגבניה סחוטה, עירית קצוצה וכד'
-</pre>
+
+
+
+
+&lt;&lt;englink [[Mangold and tofu pastry]]&gt;&gt;</pre>
 </div>
 <div created="20170402193858167" modified="20180605133225529" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="מג'דרה">
 <pre>[img[pictures/mejadra-matconim.jpg]]
